--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7",
     "uuid": "^9.0.1",
     "zod": "^3.22.2"
